[gd_scene load_steps=2 format=3 uid="uid://c1ik4o8d0qwqr"]

[ext_resource type="Script" path="res://scripts/ui/CityAlertDialog.gd" id="1_5lymf"]

[node name="CityAlertDialog" type="AcceptDialog"]
initial_position = 1
size = Vector2i(300, 250)
script = ExtResource("1_5lymf")

[node name="VBox" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -49.0

[node name="CityNameLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "City: "

[node name="PopulationLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Population: "

[node name="CurrentAlertLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Current Alert: NORMAL"

[node name="HSeparator" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="AlertLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Set Alert Level:"

[node name="AlertButtonsContainer" type="VBoxContainer" parent="VBox"]
layout_mode = 2
